--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,9 @@
+.headerHome {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
@@ -90,19 +96,19 @@
     color: #000;
     opacity: .3;
     text-align: right;
-    font-size: .625rem;
+    font-size: .8rem;
 }
 
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
+    text-align: initial;
     margin-bottom: .25rem;
 }
 
 .pokemon .detail {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -123,7 +129,7 @@
 }
 
 .pokemon .detail img {
-    max-width: 100%;
+    max-width: 80px;
     height: 70px;
 }
 
@@ -134,32 +140,483 @@
     align-items: center;
     width: 100%;
     padding: 1rem;
+    padding-bottom: 0;
 }
 
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .8rem;
+    width: 100%;
+    height: 2rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
+}
+
+.pagination button:hover {
+    background-color: #616cc2;
+}
+
+.pokemon-card {
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: transform .3s;
+}
+
+.pokemon-card:hover {
+    transform: scale(1.1);
+}
+
+.pokemon-card > li {
+    background-image: url(../img/card-bg.png);
+    background-position: 105% 130%;
+    background-size: 50%;
+    background-repeat: no-repeat;
+}
+
+/* Modal */
+
+.modal {
+    display: none;
+    height: 66%;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.header {
+    padding: .8rem 2rem 2rem 2rem;
+    background-image: url(../img/card-bg.png);
+    background-position: 50% 130%;
+    background-size: 20rem;
+    background-repeat: no-repeat;
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.back button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.back button img {
+    height: 3rem;
+}
+
+.heart {
+    background: none;
+    border: none;
+    cursor: pointer;
+    height: 2rem;
+}
+
+.heart img {
+    height: 100%;
+}
+
+.liked img{
+    content:url("../img/heartFull.png")
+}
+
+.photo {
+    display: flex;
+    justify-content: center;
+}
+
+.photo img {
+    max-width: 100%;
+    height: 230px;
+}
+
+.infos {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.modal .number {
+    display: flex;
+    color: #fff;
+    text-align: right;
+    font-size: 1.2rem;
+}
+
+.modal .name {
+    text-transform: capitalize;
+    color: #fff;
+    font-size: 2rem;
+    margin-bottom: .25rem;
+    font-weight: bolder;
+}
+
+
+.detailsModal {
+    background-color: #fff;
+    position: fixed;
+    border-radius: 50px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    padding: 30px;
+}
+
+.menuModal { 
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    padding-left: 0;
+    margin-top: 10px;
+    margin-bottom: 0;
+    align-items: baseline;   
+}
+
+.menuModal button:hover {
+    color: #000;
+}
+
+hr {
+    margin-top: 20px;
+    opacity: .2;
+}
+
+.menuModal button { 
+    background: none;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(167, 167, 167);
+}
+
+hr {
+    margin-top: 0;
+}
+
+.modal .detail {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal .detail .types {
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    gap: 5px;
+    list-style: none;
+}
+
+.modal .detail .types .type {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: 0.8rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+}
+
+.infoModal {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+    line-height: 30px;
+    font-size: 1rem;
+}
+
+.about1, .about2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.about2 {
+    text-align: justify;
+}
+
+.about1 div, .about2 div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 1rem;
+}
+
+.about2 label {
+    line-height: 1.5rem;
+    padding-right: 15px;
+}
+
+.text-gray{
+    color: rgb(167, 167, 167);
+}
+
+.text-black{
+    color: #000;
+}
+
+.selected{
+    color: #000 !important;
+    border-bottom: 3px solid #187fe7 !important;
+    padding-bottom: 15px;
+}
+
+
+
+.health-bar {
+    width: 200px;
+    height: 5px;
+    background: #ddd;
+    border-radius: 5px;
+    position: relative;
+}
+
+.bar-red {
+    background: #c54;
+    width: 100%;
+    height: 5px;
+    position: relative;
+}
+
+.bar-green {
+    background: rgb(30, 155, 50);
+    width: 100%;
+    height: 5px;
+    position: relative;
+ }
+
+ .evolutions {
+    text-align: center;
+ }
+
+ .moves {
+    line-height: 1.4rem;
+    height: 41vh;
+    overflow-y: scroll;
+ }
+
+ .moves table {
+    text-align: left;
+    padding: 0 10px;
+    width: 100%;
+ }
+
+ .moves::-webkit-scrollbar {
+    width: 0.15em;
+}
+ 
+.moves::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.moves::-webkit-scrollbar-thumb {
+  background-color: #999;
+  outline: 1px solid #999;
+}
+
+ .favoritedPokemon {
+    border: 3px dashed #555;
+ }
+
+ .imgEvolutions {
+    display: flex !important;
+    flex-direction: column;
+    overflow-y: scroll;
+ }
+
+ .imgEvolutions::-webkit-scrollbar {
+    width: 0.15em;
+}
+ 
+.imgEvolutions::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.imgEvolutions::-webkit-scrollbar-thumb {
+  background-color: #999;
+  outline: 1px solid #999;
+}
+
+ .imgEvolutions img{
+    height: 6rem;
+ }
+
+ #popup{
+	width: 15rem;
+    height: 4rem;
+    background: #fff;
+    padding: 12px 20px 20px 20px;
+    position: fixed;
+    margin: 0 auto;
+    gap: 5px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
+    display: none;
+    line-height: 1.2rem;
+    justify-content: center;
+    align-items: flex-start;
+    border: 1px solid lightgray;
+    border-radius: 1rem;
+    text-align: center;
+    animation: fadeIn 1s;
+}
+
+
+
+#close-bnt{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#close-bnt img {
+    height: 1.2rem;
+}
+
+@media screen and (max-height: 750px) {
+    .infosPokemon {
+        height: 30vh !important;
+    }
+
+    .imgEvolutions{
+        height: 28vh !important;
+    }
+
+    .moves {
+        height: 30vh !important;
+    }
+
+    .infosPokemon {
+        overflow-y: scroll;
+        height: 37vh;
+    }
+
+    .infosPokemon::-webkit-scrollbar {
+        width: 0.15em;
+    }
+    
+    .infosPokemon::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+    
+    .infosPokemon::-webkit-scrollbar-thumb {
+    background-color: #999;
+    outline: 1px solid #999;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .moves {
+        height: 37vh;
+    }
+
+    .imgEvolutions{
+        height: 35vh;
+    }
+
+    #popup{
+        width: 13rem;
+        padding: 10px 15px 10px 15px;
+        top: 0;
+    }
+
+    .photo img {
+        height: 166px;
+    }
+
+    .about1 div {
+        gap: 10px;
+    }
 }
 
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
+
+    .moves, .imgEvolutions {
+        height: 38vh;
+    }
+
+    .photo img {
+        height: 166px;
+    }
+
+    .detailsModal {
+        height: 66vh;
+    }
+
+    #popup{
+        width: 13rem;
+        padding: 10px 15px 10px 15px;
+        top: 0;
+    }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 576px){
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .moves, .imgEvolutions {
+        height: 33vh;
+    }
+    
+
+    .photo img {
+        height: 277px;
+    }
+
+    #popup{
+        width: 15rem;
+        height: 3.5rem;
+        padding: 7px 20px 20px 20px;
+        top: 0.4rem;
+    }
+
+    .header {
+        background-size: 24rem;
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    .modal {
+        height: 100vh;
+    }
+
+    .header {
+        width: 50vw;
+        margin: 0 auto;
+    }
+
+    .moves {
+        height: 33vh;
+    }
+
+    .imgEvolutions {
+        height: 34vh;
+    }
+
+    .detailsModal {
+        position: relative;
+        width: 50vw;
+        margin: 0 auto;
+        height: 48vh;
+        padding: 40px;
+        padding-top: 1.5rem;
     }
 }
