--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -127,6 +127,37 @@
     height: 70px;
 }
 
+.detalhes{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    align-items: center;
+    justify-content: center;
+}
+
+.statusPokemos {
+   
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    
+}
+.detailImg{
+    max-width: 100%;
+    height: 250px;
+    display: flex;
+} 
+
+.alturaEpeso{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;
+}
 .pagination {
     display: flex;
     flex-direction: row;
