--- a/src/css/pokedetail.css
+++ b/src/css/pokedetail.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  font-size: 0.7rem;
 }
 
 .info img {
@@ -18,7 +19,6 @@
 }
 
 .info .type {
-  font-size: 1rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
@@ -31,13 +31,13 @@
   border-radius: 4px;
   box-shadow: 0 2px 8px -2px rgba(34, 34, 34, 0.4);
   border-radius: 1rem;
-  width: 80%;
+  width: 90%;
 }
 
 .about .title {
   display: flex;
   flex-direction: row;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .info hr {
@@ -45,6 +45,47 @@
   margin-left: 0.7rem;
   margin-right: 0.7rem;
   background-color: #000;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.stats-container .stats {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.stats-container .stats p {
+  min-width: 30px;
+}
+
+.stats-container .progress-bar {
+  width: 100%;
+  height: 1rem;
+  background-color: #dddddd;
+  border-radius: 6px;
+  position: relative;
+}
+.stats-container .progress-bar .progress {
+  height: 100%;
+  border-radius: 6px;
+  position: absolute;
+}
+
+.stats-container .stats :first-child {
+  flex: 1;
+}
+
+.stats-container .stats :nth-child(2) {
+  flex: 1;
+}
+
+.stats-container .stats :nth-child(3) {
+  flex: 9;
 }
 
 .overlay {
