adaptação à implementação personalizada

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,19 +3,23 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     background-color: #f6f8fc;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
     padding: 1rem;
     background-color: #fff;
+    height: 100vh;
+    width: 100vw;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
+.content h1 {
+    margin: 0;
+}
+
+@media screen and (min-width: 992px){
+    .content{
         max-width: 992px;
         height: auto;
         margin: 1rem auto;
