--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,109 +1,80 @@
 .pokemons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
 }
 
-.normal {
-    background-color: #a6a877;
+.normal{
+     background-color: #A8A77A;
+}
+.fire{
+     background-color: #EE8130;
+}
+.water{
+     background-color: #6390F0;
+}
+.electric{
+     background-color: #F7D02C;
+}
+.grass{
+     background-color: #7AC74C;
+}
+.ice{
+     background-color: #96D9D6;
+}
+.fighting{
+     background-color: #C22E28;
+}
+.poison{
+     background-color: #A33EA1;
+}
+.ground{
+     background-color: #E2BF65;
+}
+.flying{
+     background-color: #A98FF3;
+}
+.psychic{
+     background-color: #F95587;
+}
+.bug{
+     background-color: #A6B91A;
+}
+.rock{
+     background-color: #B6A136;
+}
+.ghost{
+     background-color: #735797;
+}
+.dragon{
+     background-color: #6F35FC;
+}
+.dark{
+     background-color: #705746;
+}
+.steel{
+     background-color: #B7B7CE;
+}
+.fairy{
+     background-color: #D685AD;
 }
 
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
 
 .pokemon {
-    display: flex;
-    flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
-}
-
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
 }
 
 .pokemon .name {
-    text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
-}
-
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    text-transform: capitalize;
 }
 
 .pokemon .detail .types {
@@ -114,20 +85,35 @@
 
 .pokemon .detail .types .type {
     color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
+    padding: .25rem;
+    padding: .5rem;
+    border-radius: 5rem;
     font-size: .625rem;
-    border-radius: 1rem;
+    margin: .125rem 0;
     filter: brightness(1.1);
-    text-align: center;
+}
+
+.pokemon .number {
+    color: black;
+    opacity: 0.3;
+    text-align: right;
+    font-size: .625rem;
+}
+
+.pokemon .detail {
+    margin: auto 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .pokemon .detail img {
     max-width: 100%;
-    height: 70px;
+    height: 110px;
 }
 
-.pagination {
+.pagination{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -136,15 +122,16 @@
     padding: 1rem;
 }
 
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
+.pagination button{
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    color: white;
+    padding: .25rem;
+    padding: .5rem;
+    border-radius: 5rem;
 }
+
 
 @media screen and (min-width: 380px) {
     .pokemons {
