Added some animations

--- a/src/css/pokedetail.css
+++ b/src/css/pokedetail.css
@@ -132,6 +132,10 @@ ul {
   justify-content: space-between;
 }
 
+.detailOrganizer {
+  transition: 1s ease-in-out;
+}
+
 .modal {
   padding: 20px;
   max-width: 100%;
