--- a/src/css/pokedex.css
+++ b/src/css/pokedex.css
@@ -157,7 +157,7 @@
   margin: 0.25rem 0;
   font-size: 1.2rem;
   color: #fff;
-  background-color: #6c79db;
+  background-color: #0b74bf;
   border: none;
   border-radius: 1rem;
   cursor: pointer;
