--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,142 @@
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
+.pokemons{
+    list-style: none;
     margin: 0;
     padding: 0;
-    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
-.normal {
-    background-color: #a6a877;
-}
-
-.grass {
-    background-color: #77c850;
-}
-
-.fire {
-    background-color: #ee7f30;
-}
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
+.pokemon{
+    margin: .5rem;
+    padding: 0 0.5rem;
+    color: white;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
 }
 
-.pokemon .number {
-    color: #000;
-    opacity: .3;
+.pokemon .nunber{
+    color: #00000077;
     text-align: right;
+    padding: .25rem 1rem;
     font-size: .625rem;
 }
 
-.pokemon .name {
-    text-transform: capitalize;
+.pokemon .name{
     color: #fff;
-    margin-bottom: .25rem;
+    margin: .5rem 0;
+    margin-bottom: 0;
+    padding: 0 .25rem;
+    text-transform: capitalize;
 }
 
-.pokemon .detail {
+.pokemon .detail{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
-    padding: 0;
+.pokemon .detail .types{
+    padding: 0 0.25rem;
     margin: 0;
     list-style: none;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
+
+.pokemon .detail .types .type{
+    color: white;
     padding: .25rem .5rem;
-    margin: .25rem 0;
     font-size: .625rem;
+    margin: .25rem 0;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
 }
 
-.pokemon .detail img {
+.pokemon .detail img{
     max-width: 100%;
-    height: 70px;
+    height: 4.5rem;
+    padding: 0.3em;
 }
 
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
+.paginacao{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      padding: 1rem;
 }
 
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
+.paginacao button{
+   background: #6c79db;
+   border: none;
+   border-radius: 1rem;
+   color: white;
+   padding: .25rem .5rem;
+   font-size: .625rem;
 }
 
-@media screen and (min-width: 380px) {
+
+.normal{ 
+   background-color: #a6a877;}
+.grass{ 
+   background-color: #77c850;}
+.fire{ 
+   background-color: #ee7f30;}
+.water{ 
+   background-color: #678fee;}
+.electric{ 
+   background-color: #f7cf2e;}
+.ice{ 
+   background-color: #98d5d7;}
+.ground{ 
+   background-color: #dfbf69;}
+.flying{ 
+   background-color: #a98ff0;}
+.poison{ 
+   background-color: #a040a0;}
+.fighting{ 
+   background-color: #bf3029;}
+.psychic{ 
+   background-color: #f65687;}
+.dark{ 
+   background-color: #725847;}
+.rock{ 
+   background-color: #b8a137;}
+.bug{ 
+   background-color: #a8b720;}
+.ghost{ 
+   background-color: #6e5896;}
+.steel{ 
+   background-color: #b9b7cf;}
+.dragon{ 
+   background-color: #6f38f6;}
+.fairy{ 
+   background-color: #f9aec7;}
+
+
+@media screen and (min-width: 300px) {
     .pokemons {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
-}
+  }
+
+  @media screen and (min-width: 450px) {
+   .pokemons {
+       grid-template-columns: 1fr 1fr;
+   }
+ }
 
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
     }
-}
+  }
 
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-}
+  }
