--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,6 +84,7 @@
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
+    transition: box-shadow 0.3s;
 }
 
 .pokemon .number {
@@ -188,3 +189,37 @@
         transform: rotate(360deg);
     }
 }
+
+.pokemon.expanded {
+    position: fixed;
+    width: 17%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.pokemon.expanded .overlay {
+    display: block;
+}
+
+.pokemon.expanded .pokemon {
+    opacity: 0.7;
+}
+
+.pokemon.expanded .pokemon.highlight {
+    box-shadow: 0 0 10px rgba(255, 255, 0, 0.8);
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998; 
+}
+
