--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -197,9 +197,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Cor e opacidade do fundo escurecido */
-    z-index: 999; /* Coloca a overlay acima de outros elementos, exceto o item expandido */
-    display: flex; /* Alterado para flex para centralizar o botão de fechar */
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 999; 
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -217,9 +217,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* Adicione outros estilos conforme necessário */
-    z-index: 1000; /* Garante que o item expandido fique acima da overlay */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Adiciona sombra */
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .close-btn {
@@ -230,7 +229,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 1001; /* Garante que o botão de fechar fique acima do item expandido */
+    z-index: 1001;
 }
 
 
