--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    background-color: transparent;
 }
 
 .normal {
@@ -81,14 +82,18 @@
 .pokemon {
     display: flex;
     flex-direction: column;
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #000;
+
 }
 
 .pokemon .number {
     color: #000;
-    opacity: .3;
+    opacity: .7;
     text-align: right;
     font-size: .625rem;
 }
@@ -97,6 +102,10 @@
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
+    font-weight: bolder;
+    text-shadow: 1px 1px 0px #111;
+    font-size: 1.15em;
+    letter-spacing: 0.5px;
 }
 
 .pokemon .detail {
@@ -116,15 +125,49 @@
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .825rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
+    border: 1px solid black; 
+    filter: brightness(1.2);
+    text-align: center;
+    font-weight: bolder;
+    text-shadow: 1px 1px 0px #000;
+    letter-spacing: 0.5px;
 }
 
 .pokemon .detail img {
     max-width: 100%;
     height: 70px;
+}
+
+.details-button-container {
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: center; 
+    width: 100%; 
+}
+
+.details-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    align-items: center;
+    justify-content: center;
+}
+
+.details-content {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
 }
 
 .pagination {
@@ -136,14 +179,37 @@
     padding: 1rem;
 }
 
+.close-details-button {
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30px;
+    height: 25px;
+    background-color: red;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     color: #fff;
-    background-color: #6c79db;
+    background-color: #d76cdb;
     border: none;
     border-radius: 1rem;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #000;
+    text-shadow: 1px 1px 0px black;
+    font-size: 1.15em;
+    letter-spacing: 0.5px;
 }
 
 @media screen and (min-width: 380px) {
